--- a/techseason/leaderboard.html
+++ b/techseason/leaderboard.html
@@ -21,6 +21,18 @@
     <link rel="stylesheet" href="css/style.css">
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <style>
+        @media (min-width:320px)  { /* smartphones, iPhone, portrait 480x320 phones */ table, #view-hide{font-size: small;}}
+        @media (min-width:481px)  { /* portrait e-readers (Nook/Kindle), smaller tablets @ 600 or @ 640 wide. */table, #view-hide{font-size: small;} }
+        @media (min-width:641px)  { /* portrait tablets, portrait iPad, landscape e-readers, landscape 800x480 or 854x480 phones */table, #view-hide{font-size: medium;} }
+        @media (min-width:961px)  { /* tablet, landscape iPad, lo-res laptops ands desktops */table, #view-hide{font-size: medium;} }
+        @media (min-width:1025px) { /* big landscape tablets, laptops, and desktops */table, #view-hide{font-size: large;} }
+        @media (min-width:1281px) { /* hi-res laptops and desktops */table, #view-hide{font-size: large;} }
+        table{
+            text-align: center;
+            margin: auto;
+        }
+    </style>
 </head>
 
 <body>
@@ -77,13 +89,20 @@
         <div class="site-section">
             <div class="container">
 
-                <div id="leader-div" data-aos="fade-up" data-aos-delay="300">
+                <div id="leader-div" class="mb-3" data-aos="fade-up" data-aos-delay="300">
                     <p>Leaderboard loading...</p>
+                </div>
+                <div class="text-center">
+                <button id="view-hide" class="my-3 btn-custom " data-aos="fade-up" data-aos-delay="400" onclick="getElementById('leader-event-div').style.display = getElementById('leader-event-div').style.display === 'none' ? '' : 'none'; getElementById('view-hide').innerHTML = getElementById('leader-event-div').style.display === 'none' ? '<span>View Eventwise Breakup</span>' : '<span>Hide Eventwise Breakup</span>'"><span>View Eventwise Breakup</span></button>
+                </div>
+                <div id="leader-event-div" class="mt-3" style="display:none;" data-aos="fade-up" data-aos-delay="300">
+                    <p>Eventwise breakup loading...</p>
                 </div>
 
                 <script type="text/javascript">
                     $.ajax({
-                        url: 'https://docs.google.com/spreadsheets/d/e/2PACX-1vSlLneYIsvRTlSOMn-iKbuS11wV1_D_5MaAcY6dzlodIKf5qlTxwplScs7uYht9NI5_x_302DrkSdYJ/pub?gid=0&single=true&output=csv',
+                        async: true,
+                        url: 'https://docs.google.com/spreadsheets/d/e/2PACX-1vTTQ57WRqi5NKIGDa2WxnpNU6xmy8zKwksCu9yPfjUGp38t1R-OtKDLtT2e3h-7S2KO8g4JBmoAYwQG/pub?gid=0&single=true&output=csv',
                         success: maketable,
                         error: function() {
                             $('#leader-div').html('<p>Leaderboard could not be fetched.</p>');
@@ -113,6 +132,57 @@
                                 draco: cells[4].trim()
                             });
                         }
+                        
+                        let total = {
+                            auriga: 0,
+                            pegasus: 0,
+                            cassiopeia: 0,
+                            draco: 0
+                        };
+
+                        for (var i = 0; i < sortedData.length; i++) {
+                            total.auriga += parseInt(sortedData[i].auriga);
+                            total.pegasus += parseInt(sortedData[i].pegasus);
+                            total.cassiopeia += parseInt(sortedData[i].cassiopeia);
+                            total.draco += parseInt(sortedData[i].draco);
+                        }
+
+                        var leaderboardTable =
+                            '<div class="table-responsive"><table class=\"table table-hover table-borderless\""><thead class="table-dark"><tr"><th scope="col">Position</th><th scope="col">Team</th><th scope="col">Total Score</th></tr></thead><tbody>';
+                        
+                        var leaderboard = [
+                            {
+                                team: 'Auriga',
+                                score: total.auriga
+                            },
+                            {
+                                team: 'Pegasus',
+                                score: total.pegasus
+                            },
+                            {
+                                team: 'Cassiopeia',
+                                score: total.cassiopeia
+                            },
+                            {
+                                team: 'Draco',
+                                score: total.draco
+                            }
+                        ];
+
+                        leaderboard.sort(function(a, b) {
+                            return b.score - a.score;
+                        });
+
+                        for (var i = 0; i < leaderboard.length; i++) {
+                            leaderboardTable += '<tr>';
+                            leaderboardTable += '<th scope="row">' + (i + 1) + '</td>';
+                            leaderboardTable += '<td>' + leaderboard[i].team + '</td>';
+                            leaderboardTable += '<td>' + leaderboard[i].score + '</td>';
+                            leaderboardTable += '</tr>';
+                        }
+
+                        leaderboardTable += '</tbody></table></div>';
+                        $('#leader-div').html(leaderboardTable);
 
                         var table =
                             '<div class="table-responsive"><table class=\"table table-hover table-borderless\""><thead class="table-dark"><tr"><th scope="col">Event</th><th scope="col">Auriga</th><th scope="col">Pegasus</th><th scope="col">Cassiopeia</th><th scope="col">Draco</th></tr></thead><tbody>';
@@ -128,7 +198,7 @@
                         }
 
                         table += '</tbody></table></div>';
-                        $('#leader-div').html(table);
+                        $('#leader-event-div').html(table);
                     }
                 </script>
 
